--- a/vignettes/articles/Constraints.Rmd
+++ b/vignettes/articles/Constraints.Rmd
@@ -14,25 +14,25 @@ theme_set(theme_bw())
 
 The Hector model can be run subject to *constraints* that force the model to have a certain behavior. Technically, this means that the model's components output user-provided data as opposed to their own calculations, similar to the [data mode](http://www.cesm.ucar.edu/models/cesm1.0/cesm/cesm_doc_1_0_4/x42.html) of a CESM sub-model. Currently, the available constraints include: 
 
-* GHGs concentrations
+* GHG concentrations
 * Radiative forcing
 * Temperature
 * Net Biome Production (NBP)
 
 
-Constraints can be applied to Hector within the ini file (command-line & R) or using the Hector package `setvar` function. 
+Constraints can be applied to Hector within the ini file (command-line & R) or using the Hector package `setvar()` function. 
 
 ## Setting Constraints in Hector 
 
-There are two ways to activate a constraint in Hector: through an ini file or with the `setvar` function in R. Here is a generic overview of the two different approaches. See below for a more specific implementation of constraints. 
+There are two ways to activate a constraint in Hector: through an ini file or with the `setvar()` function in R. Here is a generic overview of the two different approaches. See below for a more specific implementation of constraints. 
 
 ### Constraints via the ini file
 
 A Hector [input file](InputFiles.html) is broken up into sections such as `[core]`, `[temperature]`, `[carbon-cycle-solver]`, and so on. Within each section, users can define parameter values and pass in input variables -- including constraints. All of the constraint variables are named with the pattern `variable_constrain` that points to the csv file where the variables' time series are defined. When the line starts the symbol `;`, the constraint is off and Hector is free running. When the constraint line beings without `;`, then Hector is using the constraint and the user-provided data is used in lieu of Hector's internal calculations. Changes to the constraints in the input files apply to Hector runs executed at the command line or with the R interface. 
 
-### Constraints via `setvar`
+### Constraints via `setvar()`
 
-With the Hector R package, the `setvar` function can be used to set constraints for a Hector instance. See below for specific examples or run `help("constraints")` or `help("haloconstrain")` for the static R help documentation. 
+With the Hector R package, the `setvar()` function can be used to set constraints for a Hector instance. See below for specific examples or run `help("constraints")` or `help("haloconstrain")` for the static R help documentation. 
 
 ### Discontinuous constraints
 
@@ -47,7 +47,7 @@ It is the user's responsibility to make sure that constraints are continuous.
 
 ### Atmospheric CO~2~
 
-CO$_2$ concentrations ([CO$_2$], given in ppmv CO$_2$) have the largest effect on total radiative forcing and is affected by carbon-cycle climate interactions. Running Hector with the CO$_2$ concentration constraint turned on mimics the default behavior of the Earth System Models which are GHG concentration driven. This capability is also helpful with debugging. With the atmospheric CO$_2$ constraint turned on, carbon-cycle and climate feedback parameters ($Q_{10}$ and $\beta$) are essentially ignored.  
+CO$_2$ concentrations ([CO$_2$], given in ppmv CO$_2$) have the largest effect on total radiative forcing and are affected by carbon-cycle climate interactions. Running Hector with the CO$_2$ concentration constraint turned on mimics the default behavior of the Earth System Models which are GHG concentration driven. This capability is also helpful with debugging. With the atmospheric CO$_2$ constraint turned on, carbon-cycle and climate feedback parameters ($Q_{10}$ and $\beta$) are essentially ignored.  
 
 
 Uncommenting (removing the `;`) from the following line in the `[simpleNbox]`section of the [input file](InputFiles.html) will turn the atmospheric CO$_2$ concentration constraint on. 
@@ -57,7 +57,7 @@ Uncommenting (removing the `;`) from the following line in the `[simpleNbox]`sec
 ```
 
 Then the model's atmospheric CO$_2$ concentration ([CO$_2$], given in ppmv CO$_2$) will follow the contents of this file (which must include at least two columns titled `Date` and `CO2_constrain`).
-Alternatively, Hector's atmospheric CO$_2$ concentration constraint can be set using the `setvar` function and `CO2_CONSTRAIN()`.
+Alternatively, Hector's atmospheric CO$_2$ concentration constraint can be set using the `setvar()` function and `CO2_CONSTRAIN()`.
 
 Here is an example in R.
 
@@ -66,7 +66,7 @@ Here is an example in R.
 # used as a comparison to the constrained Hector. 
 ini <- system.file("input/hector_ssp245.ini", package = "hector")
 core <- newcore(ini, name = "ssp245")
-invisible(run(core)) # the invisible call prevents hector core info from being printed out 
+invisible(run(core)) # the invisible call prevents Hector core info from being printed out 
 
 # Extract the output. 
 dates_to_keep <- 1850:2100
@@ -77,7 +77,7 @@ free_out <- fetchvars(core, 1850:2100, vars = vars_to_keep)
 constraint_yrs <- 1950:2050
 new_co2 <- seq(from  = 200, to = 400, length.out = length(constraint_yrs))
 
-# Use setvar to set up the the constraint, run hector & fetch the results.  
+# Use setvar() to set up the the constraint, run Hector & fetch the results.  
 setvar(core, dates = constraint_yrs, var = CO2_CONSTRAIN(), values = new_co2, unit = getunits(CO2_CONSTRAIN()))
 invisible(run(core))
 constrained_out <- fetchvars(core, 1850:2100, vars = vars_to_keep)
@@ -113,7 +113,7 @@ This means that "hybrid" runs are possible, where only some specific time ranges
 
 ### Non CO~2~ concentrations
 
-Hector can constrain non CO$_2$ GHGs (N$_2$O, CH$_4$, and halocarbons) concentrations. These all work in more-or-less the same way as the atmospheric CO$_2$ constraint (above), except that there is no equivalent to the carbon pool adjustment for these gases. 
+Hector can constrain non CO$_2$ GHG concentrations (N$_2$O, CH$_4$, and halocarbons). These all work in more-or-less the same way as the atmospheric CO$_2$ constraint (above), except that there is no equivalent to the carbon pool adjustment for these gases. 
 
 In the [input file](InputFiles), they are triggered by a line like the following in their corresponding component section:
 
@@ -123,7 +123,7 @@ X_constrain=csv:path/to/file.csv
 
 As with other CSV inputs, the `/path/to/file.csv` above must include columns for `Date` and `X_constrain`. 
 
-Alternatively, constraints can be set from the R interface using `setvars`. Implementing these constraints follows the same pattern as the temperature, radiative forcing, and atmospheric CO~2~: Set up an active Hector core, use `setvars` to set the constraint, run, and fetch the output from the Hector core. 
+Alternatively, constraints can be set from the R interface using `setvar()`. Implementing these constraints follows the same pattern as the temperature, radiative forcing, and atmospheric CO$_2$: Set up an active Hector core, use `setvar()` to set the constraint, run, and fetch the output from the Hector core. 
 
 
 **How the constraint is implemented in Hector (C++) using CH~4~ as an example**
@@ -133,8 +133,8 @@ If the constraint exists, Hector will skip all atmospheric chemistry calculation
 If the constraint does not exist, Hector will proceed with its standard atmospheric chemistry routines for calculating the atmospheric concentration based on emissions and concentrations of other relevant species.
 This means that _concentration constraints always take precedence over emissions_; in other words, if a particular time step has both an emissions and a concentration constraint, the emissions constraint is ignored.
 
-Note that CH~4~ and N~2~O have special variables for their pre-industrial concentration that could conflict with the constraint. In Hector, _concentration constraints take precedence over pre-industrial concentrations_;
-in other words, Hector assumes that if you provide a concentration constraint for the pre-industrial timestep, that is the concentration you want, regardless of the prescribed pre-industrial value. The equations for CH~4~ and N~2~O concentrations to radiative forcing were parameterized with specific pre-industrial concentrations. Users must be cautions of changes to pre-industrial values and how it may affect the radiative forcing calculations. 
+Note that CH$_4$ and N$_2$O have special variables for their pre-industrial concentration that could conflict with the constraint. In Hector, _concentration constraints take precedence over pre-industrial concentrations_;
+in other words, Hector assumes that if you provide a concentration constraint for the pre-industrial timestep, that is the concentration you want, regardless of the prescribed pre-industrial value. The equations for CH$_4$ and N$_2$O concentrations to radiative forcing were parameterized with specific pre-industrial concentrations. Users must be cautions of changes to pre-industrial values and how it may affect the radiative forcing calculations. 
 
 ### Radiative forcing
 
@@ -153,7 +153,7 @@ Here is an example of using the R package to implement the radiative forcing con
 # Set up an instance of Hector & run 
 ini <- system.file("input/hector_ssp245.ini", package = "hector")
 core <- newcore(ini, name = "ssp245")
-invisible(run(core)) # the invisible call prevents hector core info from being printed out 
+invisible(run(core)) # the invisible call prevents Hector core info from being printed out 
 
 # Extract the output. 
 dates_to_keep <- 1850:2100
@@ -165,7 +165,7 @@ free_out <- fetchvars(core, 1850:2100, vars = vars_to_keep)
 new_rf <- free_out[free_out$variable == RF_TOTAL() & free_out$year %in% 1950:2050, ]
 new_rf$value <- new_rf$value + 3 # increase the total RF
 
-# Use setvar to set up the the constraint, run hector & fetch the results.  
+# Use setvar() to set up the the constraint, run Hector & fetch the results.  
 setvar(core, dates = new_rf$year, var = FTOT_CONSTRAIN(), values = new_rf$value, unit = "W/m2")
 invisible(run(core))
 constrained_out <- fetchvars(core, 1850:2100, vars = vars_to_keep)
@@ -195,7 +195,7 @@ Then the model's global mean temperature `Tgav` will follow the contents of this
 
 Once Hector's internal date passes the last date in the constraint file, the model's temperature component becomes *unconstrained*, except that we do not permit it to suddenly jump to a new temperature. Instead, changes in global radiative forcing (from which temperature change is computed) are applied to the end-of-constraint temperature. For more details, see the detailed comments in the `TemperatureComponent::run` (temperature_component.cpp).
 
-Here is an example of using the R package to implement the global average mean temperature (tgav) constraint. 
+Here is an example of using the R package to implement the global average mean temperature (`Tgav`) constraint. 
 
 ```{r, message=FALSE, warning=FALSE}
 # Set up an instance of Hector & run 
@@ -212,7 +212,7 @@ free_out <- fetchvars(core, 1850:2100, vars = vars_to_keep)
 new_tgav <- free_out[free_out$variable == GLOBAL_TEMP(), ]
 new_tgav$value <- new_tgav$value + new_tgav$value * 0.25 # increase global temp by 25%
 
-# Use setvar to set up the the constraint, run hector & fetch the results.  
+# Use setvar() to set up the the constraint, run Hector & fetch the results.  
 setvar(core, dates = new_tgav$year, var = TGAV_CONSTRAIN(), values = new_tgav$value, unit = getunits(TGAV_CONSTRAIN()))
 invisible(run(core))
 constrained_out <- fetchvars(core, 1850:2100, vars = vars_to_keep)
@@ -240,7 +240,7 @@ The NBP constraint can be activated via the ini file by adding the line
 NBP_constrain=csv:path/to/constraint/file.csv
 ```
 
-to the `[simpleNbox]` section of the [input file](InputFiles.html). Where the constraint csv file has columns titled `Date` and `NBP_constrain` similar to the sample file is included in the repository (see `inst/input/tables/tgav_historical.csv`).
+to the `[simpleNbox]` section of the [input file](InputFiles.html), where the constraint csv file has columns titled `Date` and `NBP_constrain` similar to the sample file is included in the repository (see `inst/input/tables/tgav_historical.csv`).
 
 Here is an example implemented in the R interface
 
@@ -257,7 +257,7 @@ dates_to_keep <- 1850:2100
 vars_to_keep <- c(ATMOSPHERIC_CO2(), NBP(), NPP(), RH())
 free_out <- fetchvars(core, 1850:2100, vars = vars_to_keep)
 
-# Use setvar to set up the the constraint, run hector & fetch the results.  
+# Use setvar() to set up the the constraint, run Hector & fetch the results.  
 setvar(core, dates = constraint_yrs, var = NBP_CONSTRAIN(), values = constraint_values, 
        unit = getunits(NBP_CONSTRAIN()))
 invisible(run(core))
@@ -278,8 +278,8 @@ ggplot() +
 ```
 
 The model hits the constraint exactly by raising RH and lowering NPP.
-Because of this, atmospheric CO~2~ rises rapidly during the constraint period, as we've basically shut down the land C sink. As a result, when the model exits the constraint period, NPP shoots up very high (because the atmosphere is saturated with CO~2~)
-In a similar vein, the suppressed NPP means, once outside of the constraint, that RH is low and thus the land becomes a large sink as it draws down the excess atmospheric CO~2~. 
+Because of this, atmospheric CO$_2$ rises rapidly during the constraint period, as we've basically shut down the land C sink. As a result, when the model exits the constraint period, NPP shoots up very high (because the atmosphere is saturated with CO$_2$).
+In a similar vein, the suppressed NPP means, once outside of the constraint, that RH is low and thus the land becomes a large sink as it draws down the excess atmospheric CO$_2$. 
 
 
 
